# churn-prediction

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  drift.py  serve.py  train.py
tests/: test_serve.py
