[project]
name = "churn-prediction"
version = "0.1.0"
description = "Production-grade customer churn prediction pipeline"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "mlflow>=2.13.2",
    "evidently>=0.4.30",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "joblib>=1.4.2",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.3",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pandas-stubs>=2.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
# PLR0913: ML functions legitimately take many hyperparameters
# PLR2004: status codes in tests and thresholds in data generators are self-explanatory
# PLW0603: module-level model handle loaded at startup is the standard FastAPI pattern
# N806: X / X_train naming is the ML convention
ignore = ["PLR0913", "PLR2004", "PLW0603", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
